Added JWT middleware and GET userByID route
