# handlers/user.go
@@ -7,22 +7,22 @@ import (
 	"github.com/kevin-griley/api/data"
 )
 
-type LoginRequest struct {
+type CreateUserRequest struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
 }
 
 // @Summary			Create User
 // @Description		Create a new user
-// @Tags			Auth
+// @Tags			User
 // @Accept			json
 // @Produce			json
-// @Param			body	body		LoginRequest	true	"Login Request"
+// @Param			body	body		CreateUserRequest	true	"Create User Request"
 // @Success         200		{object}	data.User	"User"
 // @Failure         400		{object} 	ApiError	"Bad Request"
-// @Router			/register	[post]
+// @Router			/user	[post]
 func HandlePostUser(w http.ResponseWriter, r *http.Request) *ApiError {
-	registerReq := new(LoginRequest)
+	registerReq := new(CreateUserRequest)
 	if err := json.NewDecoder(r.Body).Decode(registerReq); err != nil {
 		return &ApiError{http.StatusBadRequest, err.Error()}
 	}
@@ -40,4 +40,28 @@ func HandlePostUser(w http.ResponseWriter, r *http.Request) *ApiError {
 	user.ID = userID
 	return WriteJSON(w, http.StatusOK, user)
 
+}
+
+// @Summary			Get User by ID
+// @Description		Get a user by ID
+// @Tags			User
+// @Security 		ApiKeyAuth
+// @Accept			json
+// @Produce			json
+// @Param			id		path	string	true	"User ID"
+// @Success         200		{object}	data.User	"User"
+// @Failure         400		{object} 	ApiError	"Bad Request"
+// @Router			/user/{id}	[get]
+func HandleGetUser(w http.ResponseWriter, r *http.Request) *ApiError {
+	id, err := GetID(r)
+	if err != nil {
+		return &ApiError{http.StatusBadRequest, err.Error()}
+	}
+
+	user, err := data.GetUserByID(id)
+	if err != nil {
+		return &ApiError{http.StatusNotFound, err.Error()}
+	}
+
+	return WriteJSON(w, http.StatusOK, user)
 }
